Ejemplo markdown en el jupyter notebook.

--- a/ejemplo.ipynb
+++ b/ejemplo.ipynb
@@ -84,6 +84,51 @@
    "source": [
     "echo \"Esta es una línea en PHP\";"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "kernel": "Markdown"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Ejemplo nº pico\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Ejemplo nº pico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 1\n",
+    "x = x + 2\n",
+    "print(x)"
+   ]
   }
  ],
  "metadata": {
@@ -110,11 +155,28 @@
      ""
     ],
     [
+     "Markdown",
+     "markdown",
+     "markdown",
+     "",
+     ""
+    ],
+    [
      "PHP",
      "jupyter-php",
      "php",
      "",
      ""
+    ],
+    [
+     "Python3",
+     "python3",
+     "Python3",
+     "#FFD91A",
+     {
+      "name": "ipython",
+      "version": 3
+     }
     ],
     [
      "SoS",
